# Ontology-Analyzer

./: .gitignore  README.md  docker-compose.yml
Infrastructure/: docker-compose.yml  (+1 more)
eval/evaluation-deepeval/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
eval/evaluation-deepeval/app/: cli.py  clients.py  config.py  evaluator.py  gui.py  llm_adapter.py  llm_cache.py  llm_usage.py  metrics.py  scheuduler.py  testcase_loader.py
eval/evaluation-deepeval/app/metrics_impl/: judge_wrapper.py
eval/evaluation-deepeval/app/repo/: analytics.py  helpers.py  repository.py  snapshot.py
eval/evaluation-deepeval/app/static/: index.html
impl/openwebui-pipelines/app/: .gitignore  README.md  pyproject.toml
impl/openwebui-pipelines/app/pipelines/: querycaching.py  selfquery_llm.py  stupidrag.py  toolassist.py
impl/openwebui-pipelines/app/prototypes/ontology-wiki-prototype/: .env.example  generator.py
impl/openwebui-pipelines/app/prototypes/querycaching/: Dockerfile  README.md  generator.py  querycaching.py
impl/openwebui-pipelines/app/prototypes/rag/: embedding_model.py  main.py
impl/openwebui-pipelines/app/prototypes/selfquery_llm/: __init__.py  selfquery_llm.py
impl/openwebui-pipelines/app/prototypes/stupidrag/: __init__.py  stupidrag.py
impl/openwebui-pipelines/app/prototypes/toolassist/: main.py  pathfinding.py  sparql_queries.py  sparql_tools.py
impl/openwebui-pipelines/app/prototypes/utils/: function_calling_blueprint.py  llm_adapter.py
impl/openwebui-pipelines/app/utils/pipelines/: main.py
(+87 files in other folders)
