[project]
name = "evaluation-deepeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "deepeval>=3.9.3",
    "fastapi>=0.135.2",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
