[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "openai>=1.63.2",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.2",
    "sparqlwrapper>=2.0.0",
    "sqlmodel>=0.0.33",
]
